--- a/addprise2/views/index.html
+++ b/addprise2/views/index.html
@@ -26,6 +26,7 @@
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
 	<script src="/scripts/addone.js"></script>
+	<script src="/scripts/throttle.js"></script>
 {% endblock %}
 
 {% block content %}
