--- a/addprise2/views/index.html
+++ b/addprise2/views/index.html
@@ -3,25 +3,7 @@
 {% block title %} {{title}} {%endblock%}
 
 {% block head %}
-<style type="text/css">
-		#hand-wrapper{width: 500px;height: 500px;text-align: center;background: linear-gradient(to bottom right, #9CD792 0%, #D6DED2 80%);}
-		.hand{margin-top: 200px;position: relative;font-size: 0px;display: inline-block;}
-		.hand-left{display: inline-block;width: 150px;height: 180px;background: #a6d49d;position: absolute;z-index: 1;top: 14px;border: 1px solid #A76E49;}
-		.hand-right{display: inline-block;position: relative;margin-left: 80px;}
-		.hand-right-finger{height: 50px;width: 175px;border-radius: 0px 40px 40px 0px;background: linear-gradient(to right, #a6d49d 80%, white 100%);border: 5px solid #a6d49d;box-shadow: 0px 0px 0px 1px #A76E49;}
-		.hand-right-finger::after{content: '';background-color: blue;}
-		.finger1{position: absolute;width: 150px;transform: rotateZ(-60deg);transform-origin: 25px 25px;text-align: center}
-		.finger1-press{background: linear-gradient(to right, #a6d49d 50%, #A6A6A6 100%);width: 50px;height: 100%;display: inline-block;border-radius: 50%;}.finger2{border-top-left-radius: 10px;}
-		.finger5{border-bottom-left-radius: 10px;}
-		.hidden{width: 100px;position: absolute;background-color: #a6d49d;left: 1px;top: 1px;bottom: 1px;z-index: 2;border-radius: 10px;}
-		.hand-small{position: absolute;right: 10px;top: 0px;font-size: 36px;transition: transform 0.5s;opacity: 0;}
-		.hand-small.animate{animation: praise-add 0.5s;}
-		@keyframes praise-add{
-			0%{transform: translate(0px, 0px);opacity: 0;}
-			75%{transform: translate(100px, -100px);opacity: 1;}
-			100%{transform: translate(100px, -100px);opacity: 0;}
-			}
-	</style>
+	<link href="/stylesheets/index.css" rel="stylesheet" />
 	<script src="https://cdn.bootcss.com/systemjs/0.20.17/system.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
@@ -59,14 +41,20 @@
 				});
 				//使用插件
 				$('#hand-wrapper').initPraise(10,function(){
-					axios.get('http://localhost/addPraise.php?operation=insert')
+					axios.get('/praise/add')
 					.then(function (response) {
-						$("#currentPraise").text(response.data);
+						if(response.data.success){
+							var currentNum= parseInt( $("#currentPraise").text() );
+							$("#currentPraise").text(currentNum+1);
+						}else{
+							console.log(response.data);
+						}
+						
 					});
 				});
 			});
 			//获取当前数据库中的点赞数
-			axios.get('http://localhost/addPraise.php?operation=select')
+			axios.get('/praise/select')
 			.then(function (response) {
 				$("#currentPraise").text(response.data);
 			});
