--- a/addprise3/views/index.html
+++ b/addprise3/views/index.html
@@ -8,8 +8,9 @@
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
 	<script src="https://cdn.bootcss.com/x-tag/1.5.11/x-tag-core.min.js"></script>
-	<script src="/scripts/addone.js"></script>
-	<script src="/scripts/throttle.js"></script>
+	<script type="text/javascript" src="/scripts/main.js"></script>
+	<!-- <script src="/scripts/addone.js"></script>
+	<script src="/scripts/throttle.js"></script> -->
 {% endblock %}
 
 {% block content %}
