--- a/addprise3/src/views/index.html
+++ b/addprise3/src/views/index.html
@@ -4,34 +4,21 @@
 
 {% block head %}
 	<link href="/stylesheets/index.css" rel="stylesheet" />
+	<script src="https://cdn.bootcss.com/x-tag/1.5.11/x-tag-core.min.js"></script>
 	<script src="https://cdn.bootcss.com/systemjs/0.20.17/system.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
-	<script src="https://cdn.bootcss.com/x-tag/1.5.11/x-tag-core.min.js"></script>
-	<script type="text/javascript" src="/scripts/main.js"></script>
-	<!-- <script src="/scripts/addone.js"></script>
-	<script src="/scripts/throttle.js"></script> -->
+	<script src="/scripts/addone.js"></script>
+	<script src="/scripts/throttle.js"></script>
+	<script src="/scripts/tag.js"></script>
 {% endblock %}
 
 {% block content %}
-
+<div id="hand-wrapper">
+		<div>当前点赞数量：<span id="currentPraise"></span></div>
+		<x-praise></x-praise>
+	</div>
 	<script>
-		xtag.register('x-praise', {
-		  content:`<div id="hand-wrapper">
-					<div>当前点赞数量：<span id="currentPraise"></span></div>
-					<div class="hand">
-						<div class="hand-left"></div>
-						<div class="hand-right">
-							<div class="hand-right-finger finger1"><div class='finger1-press'></div></div>
-							<div class="hand-right-finger finger2"></div>
-							<div class="hand-right-finger finger3"></div>
-							<div class="hand-right-finger finger4"></div>
-							<div class="hand-right-finger finger5"></div>
-							<div class="hidden"></div>
-						</div>
-					</div>
-				</div>`
-		});
 		$(function () {
 		    SystemJS.import('/scripts/index-compiled.js').then(function (m) {
 				//绑定插件
@@ -44,6 +31,7 @@
 						});
 					}
 				});
+
 				//使用插件
 				$('#hand-wrapper').initPraise(10,function(){
 					axios.get('/praise/add')
@@ -59,11 +47,10 @@
 				});
 			});
 			//获取当前数据库中的点赞数
-			axios.get('/praise/select')
-			.then(function (response) {
-				$("#currentPraise").text(response.data);
-			});
+			// axios.get('/praise/select')
+			// .then(function (response) {
+			// 	$("#currentPraise").text(response.data);
+			// });
 		});
 	</script>
-	<x-praise></x-praise>
 {% endblock %}
